# cortex

./: .gitignore  README.md  app.py  convert_dataset.py  convert_gguf.sh  fuse_model.py  pyproject.toml  train_nmt.py  train_pipeline.sh
